fix note creation dragging (Now its much smoother), add overflow to the html so that the user has a 'infinite' playground to create notes

--- a/app/assets/stylesheets/bulma.css
+++ b/app/assets/stylesheets/bulma.css
@@ -2868,6 +2868,7 @@ textarea {
 
 html {
   box-sizing: border-box;
+  overflow: auto !important;
 }
 
 *, *::before, *::after {
